# lox-ocaml

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  dune  dune-project  lox  lox.install  lox.opam  test.sh  test2.sh
lib/: .merlin  dune  interpret.ml  lex.ml  monad_utils.ml  parse.ml  parser.ml  var_resolver.ml
test/: .merlin  arithmetic.lox  big.lox  boolean_logic.expected  boolean_logic.lox  builder.lox  callee_changes_environment.lox  closure.lox  closure_mutating_globals.expected  closure_mutating_globals.lox  compare.lox  count.lox  dune  empty_class.lox  empty_class_instance.lox  environment.lox  err_missing_quote.expected  err_missing_quote.lox  err_number.expected  err_number.lox  err_return_outside_function.expected  err_return_outside_function.lox  err_shadowing_in_scope.expected  err_shadowing_in_scope.lox  err_unbound_var.expected  err_unbound_var.lox  err_unbound_var_assignement.expected  err_unbound_var_assignement.lox  err_unknown_token.expected  err_unknown_token.lox  err_unused_function.lox  err_unused_function_argument.lox  err_unused_var.lox  err_var_own_initializer.expected  err_var_own_initializer.lox  fibonacci.expected  fibonacci.lox  fibonacci_rec.expected  fibonacci_rec.lox  fn_arg_mutating_env.lox  (+22 more)
test/official/: precedence.lox
test/official/assignement/: prefix_operator.lox
test/official/assignment/: grouping.lox  infix_operator.lox  undefined.lox
test/official/closure/: reuse_closure_slot.lox
test/official/constructor/: arguments.lox  call_init_early_return.lox  call_init_explicitly.lox  default.lox  (+7 more)
(+97 files in other folders)
