opam-version: "1.0"
name: "lox"
version: "0.1"
synopsis: "A compiler and interpreter for the lox programming language"
description: """
A compiler and interpreter for the lox programming language
"""
maintainer: "Philippe Gaultier <philigaultier@gmail.com>"
authors: "Philippe Gaultier <philigaultier@gmail.com>"
license: "MIT"
homepage: "https://github.com/gaultier/lox-ocaml"
dev-repo: "git@github.com:gaultier/lox-ocaml.git"
depends: [ "ocaml" "dune" "sexplib" "ppx_compare" "ppx_sexp_conv"]
build: ["dune" "build" "-p" name "-j" jobs]
